# Rag-tutorial-E2E

./: main.py  pyproject.toml  requirements.txt
data-parsing/: data-ingestion.ipynb
data-parsing/data/text_files/: sample1.txt  sample2.txt
multimodal-data-parsing/: unstrcuture.ipynb
