[project]
name = "rag-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
